// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
  {
    "key": {
      "text": "Note",
    },
    "value": {
      "text": "This is a submission note",
    },
  },
]
`;

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status NOT_ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
  {
    "key": {
      "text": "Note",
    },
    "value": {
      "text": "This is a submission note",
    },
  },
]
`;

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status SUBMITTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Submitted</strong>",
    },
  },
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
  {
    "key": {
      "text": "Note",
    },
    "value": {
      "text": "This is a submission note",
    },
  },
]
`;

exports[`duty to refer utils dutyToReferStatusCard returns a NOT_REQUIRED duty to refer status card object 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": true,
  "links": [],
  "status": {
    "colour": "grey",
    "text": "Not required",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns a NOT_STARTED duty to refer status card object 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/dtr/submission",
      "text": "Add referral details",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns a SUBMITTED duty to refer status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Submitted to",
      },
      "value": {
        "text": "Some Council",
      },
    },
    {
      "key": {
        "text": "Reference",
      },
      "value": {
        "text": "REF123",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "1 December 2025 (9 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "user1",
      },
    },
  ],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/dtr/submission-id/details",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns an empty duty to refer card for undefined duty to refer 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [],
  "status": {
    "text": "Unknown",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry does not include outcome support text when only reason is updated 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-16T09:00:00.000Z",
    "type": "datetime",
  },
  "html": "
    <p><strong class="govuk-tag govuk-tag--grey">Not accepted</strong></p>
  

  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
      
        
          <li>Reason changed to: No local connection</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Outcome details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry does not show local authority when only submission date is changed 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-17T09:00:00.000Z",
    "type": "datetime",
  },
  "html": "

  
    
  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
          <li>Date submitted changed to: 17 April 2025 (237 days ago)</li>
        
      
        
      
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Submission details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry includes outcome support text when outcome is updated with a status change 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-16T09:00:00.000Z",
    "type": "datetime",
  },
  "html": "
    <p><strong class="govuk-tag govuk-tag--yellow">Accepted</strong></p>
  

  
    
      <p class="">
        West Oxfordshire District Council agreed to support this person with housing
      </p>
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
      
        
          <li>Reason changed to: Prevention and relief duty</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Outcome details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry returns a timeline entry for a note 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-15T14:30:00.000Z",
    "type": "datetime",
  },
  "html": "<p>Some note</p><p>line 2</p>",
  "label": {
    "text": "Note added",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry returns a timeline entry for a submission added record 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-12T17:07:00.000Z",
    "type": "datetime",
  },
  "html": "
    <p><strong class="govuk-tag govuk-tag--yellow">Submitted</strong></p>
  

  
    
      <p class="govuk-!-margin-bottom-1">
        Date submitted: 12 April 2025 (242 days ago)
      </p>
    
  
    
      <p class="govuk-!-margin-bottom-1">
        Local authority: Cherwell District Council
      </p>
    
  
    
      <p class="govuk-!-margin-bottom-1">
        Reference: REF123
      </p>
    
  
    
      <p class="govuk-!-margin-bottom-1">
        Note: No note added
      </p>
    
  

  ",
  "label": {
    "text": "Submission details added",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry returns a timeline entry for a submission updated record 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-15T10:00:00.000Z",
    "type": "datetime",
  },
  "html": "

  
    
  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
          <li>Date submitted changed to: 14 April 2025 (240 days ago)</li>
        
      
        
          <li>Local authority changed to: Oxford City Council</li>
        
      
        
          <li>Reference changed to: REF456</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Submission details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry returns a timeline entry for an outcome added record 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-15T15:38:00.000Z",
    "type": "datetime",
  },
  "html": "
    <p><strong class="govuk-tag govuk-tag--yellow">Accepted</strong></p>
  

  
    
      <p class="">
        Cherwell District Council agreed to support this person with housing
      </p>
    
  
    
      <p class="govuk-!-margin-bottom-1">
        Reason: Prevention and relief duty
      </p>
    
  
    
      <p class="govuk-!-margin-bottom-1">
        Note: No note added
      </p>
    
  

  ",
  "label": {
    "text": "Outcome details added",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry returns a timeline entry for an outcome updated record 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-16T09:00:00.000Z",
    "type": "datetime",
  },
  "html": "
    <p><strong class="govuk-tag govuk-tag--grey">Not accepted</strong></p>
  

  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
      
        
          <li>Reason changed to: Intentionally homeless</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Outcome details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry shows local authority but not reference when only local authority is changed 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-17T10:00:00.000Z",
    "type": "datetime",
  },
  "html": "

  
    
  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
      
        
          <li>Local authority changed to: Vale of White Horse District Council</li>
        
      
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Submission details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry shows local authority in submission changes when local authority is changed 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-16T10:00:00.000Z",
    "type": "datetime",
  },
  "html": "

  
    
  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
          <li>Date submitted changed to: 16 April 2025 (238 days ago)</li>
        
      
        
          <li>Local authority changed to: South Oxfordshire District Council</li>
        
      
        
          <li>Reference changed to: REF999</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Submission details changed",
  },
}
`;

exports[`duty to refer utils dutyToReferTimelineEntry shows reference removed when reference is changed to blank 1`] = `
{
  "byline": {
    "text": "Jane Doe",
  },
  "datetime": {
    "timestamp": "2025-04-16T11:00:00.000Z",
    "type": "datetime",
  },
  "html": "

  
    
  
    
  
    
  
    
  

  
    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
      
        
      
        
      
        
          <li>Reference removed</li>
        
      
        
      
    </ul>
  ",
  "label": {
    "text": "Submission details changed",
  },
}
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Accepted</strong> <p class="govuk-!-margin-top-4">Some Council agreed to support this person with housing</p>",
    },
  },
  {
    "key": {
      "text": "Reason",
    },
    "value": {
      "text": "Intentionally homeless",
    },
  },
  {
    "key": {
      "text": "Note",
    },
    "value": {
      "text": "This is an outcome note",
    },
  },
]
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status NOT_ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--grey">Not accepted</strong> <p class="govuk-!-margin-top-4">Some Council will not support this person with housing</p>",
    },
  },
  {
    "key": {
      "text": "Reason",
    },
    "value": {
      "text": "Intentionally homeless",
    },
  },
  {
    "key": {
      "text": "Note",
    },
    "value": {
      "text": "This is an outcome note",
    },
  },
]
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status SUBMITTED 1`] = `[]`;
